# libalternatives

./: CMakeLists.txt  README.md  config.h  config.h.in  release_tag.sh
cmake/: CodeCoverage.cmake  libalternatives.pc.in  libalternativesConfig.cmake.in
doc/: CMakeLists.txt  alts.1
src/: CMakeLists.txt  Makefile.gnu  Makefile.gnu.common  config_parser.c  default_helper.c  libalternative.c  libalternative.h  libalternatives.c  libalternatives.h  libalternatives.version  options_parser.c  parser.c  parser.h
src/utils/: alternative.c  alternatives.c  default_helper.c  group_consistency_rules.c  list_binaries.c  utils.h
test/: CMakeLists.txt  alternatives_tests.c  argv_replaced_helper.c  config_parser_tests.c  options_parser_tests.c  parser_tests.c  test.c
test/test_defaults/multiple_alts/: 10.conf  20.conf  30.conf
test/test_defaults/one_alternative/: 90.conf
test/test_defaults/test/: 10.conf  20.conf
test/test_exec/area47/: 10.conf
test/test_exec/area48/: 10.conf
test/test_exec/test42/: 10.conf  8.conf
test/test_groups/node/: 10.conf  20.conf  30.conf
test/test_groups/node_bad/: 10.conf  20.conf  30.conf
test/test_groups/npm/: 10.conf  20.conf  30.conf
utils/: CMakeLists.txt  Makefile.gnu  alternative.c  alternatives.c  group_consistency_rules.c  list_binaries.c  utils.h
